public/stylesheets/style.css
@import url("https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@700;800;900&display=swap");

body {
  --accent1: #f8d23c;
  --accent2: #e3d081;
  --fg: #1e1e1e;
  --bg: #333333;
  --black: #181818;
  --font-color: #dddddd;
  --input-gradient-1: #494536;
  --input-gradient-2: #4e4936;
  --body-padding: 20px;
  --header-height: 70px;
  --footer-height: 200px;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  background-color: var(--bg);
  font-family: "Archivo", sans-serif;
  color: var(--font-color);
  position: relative;
}

::-moz-selection,
::selection {
  background-color: var(--accent1);
  color: var(--black);
}

.hidden {
  display: none !important;
}

.accent1 {
  color: var(--accent1);
}
.accent2 {
  color: var(--accent2);
}
h1 {
  max-width: 85%;
}
h1,
h2,
h3,
h4,
li,
section,
p,
a,
td {
  word-break: normal;
  overflow-wrap: anywhere;
}

a {
  text-decoration: none;
  color: var(--accent1);
}

a:hover {
  text-decoration: underline;
}

button {
  cursor: pointer;
}

.yellow-btn {
  background-color: var(--accent1);
  color: var(--bg);
  border: 5px solid #ccb146;
  border-top: none;
  border-radius: 2px;
  transition: 0.2s ease-out;
  font-size: 18px;
  text-transform: uppercase;
  box-shadow: 0 5px 10px #0009;
}
.yellow-btn:focus {
  transform: scale(1.02);
  box-shadow: 0 3px 25px #0009;
}
.yellow-btn:active {
  transform: scale(0.98);
}

section,
table {
  padding: var(--body-padding);
}

/* -       -       -       -       -       -       -       -  Header -       -       -       -       -       -       -       - */

header {
  position: relative;
  background-color: var(--black);
  height: var(--header-height);
}

header section:first-of-type {
  display: flex;
  justify-content: space-between;
  position: relative;
  z-index: 10;
  height: 100%;
  background-color: var(--black);
}

h1.header-small {
  display: none;
}

#burger {
  background: none;
  border: none;
  padding: 0;
  width: 28px;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
}
#burger div {
  position: relative;
  width: 100%;
  height: 4px;
  background-color: var(--font-color);
  transition: 0.2s;
  top: 0;
  bottom: 0;
}
body.expand {
  overflow: hidden;
}
body.expand #nav-bar {
  display: flex;
}
body.expand #burger div:first-of-type {
  top: 8px;
  opacity: 0;
}
body.expand #burger div:last-of-type {
  top: -8px;
  opacity: 0;
}

body.expand #burger div:nth-child(2) {
  animation: bounce 0.2s linear none 1;
}
#burger:focus {
  outline: none;
}
#burger:focus div {
  background-color: var(--accent1);
  transition: 0.2s;
}

.logo {
  font-size: 24px;
  text-align: center;
  align-self: center;
}
.logo a {
  font-family: "Arvo", serif;
  color: var(--font-color);
}

.logo a:hover {
  text-decoration: none;
}

#nav-bar {
  margin: 0;
  list-style: none;
  position: fixed;
  background: var(--fg);
  z-index: 3;
  width: 100%;
  height: calc(100vh - var(--header-height));
  left: 0;
  display: none;
  flex-direction: column;
  justify-content: start;
  align-items: start;
  padding: 20px;
  padding-top: 5px;
  overflow-y: scroll;
}

#nav-bar li {
  font-size: 20px;
  width: 100%;
  text-transform: capitalize;
}

#nav-bar li:first-of-type::after {
  content: "";
  border-bottom: 1px solid var(--font-color);
  width: 100%;
  display: block;
  position: absolute;
  left: 0;
  opacity: 0.2;
}

#nav-bar li a {
  color: var(--font-color);
  width: 100%;
  text-decoration: none;
  display: flex;
  align-items: center;
  padding: 15px 0;
}

#nav-bar li:first-of-type {
  padding-bottom: 15px;
}

#nav-bar li a i {
  font-size: 30px;
  margin-right: 10px;
  opacity: 0.5;
}

#nav-bar li a:hover {
  color: var(--accent1);
}

/* -       -       -       -       -       -       -       -  Part List -       -       -       -       -       -       -       - */
#pc-planner-list td {
  padding: 0;
}
#pc-planner-list tr {
  grid-template-columns: 1fr 1fr;
  grid-column-gap: 10px;
  grid-row-gap: 10px;
}
#pc-planner-list .part_category {
  grid-column: 1 / 3;
  position: relative;
  padding: 0;
  white-space: nowrap;
}
#pc-planner-list .part_category::after {
  content: "";
  height: 2px;
  display: block;
  width: 100%;
  background-color: var(--bg);
  position: absolute;
  top: 50%;
}
#pc-planner-list .part_category a {
  color: var(--font-color);
  background-color: var(--fg);
  position: relative;
  z-index: 1;
  padding-right: 10px;
  font-weight: bold;
}

#pc-planner-list tr {
  border: none;
  overflow-x: auto;
}

#pc-planner-list .part_buy {
  text-align: center;
}
#pc-planner-list .part_remove {
  text-align: center;
  border: 2px solid var(--bg);
  border-radius: 3px;
}

#pc-planner-list .part_buy a,
#pc-planner-list .part_remove .remove {
  background: none;
  border: none;
  padding: 7px;
  width: 100%;
  display: inline-block;
  height: 100%;
}
#pc-planner-list .part_buy {
  background-color: var(--accent1);
  border-radius: 3px;
  font-weight: bold;
}
.part_buy a {
  color: var(--fg);
  text-decoration: none;
}
.part_buy i {
  margin-left: 5px;
  position: relative;
  top: 2px;
}
#text-remove {
  font-weight: bold;
}
.part_remove .remove {
  color: var(--font-color);
  opacity: 0.3;
}
.chooseCategory {
  grid-column: 1 / 3;
  margin-top: 10px;
}
.chooseCategory a {
  background: var(--accent1);
  padding: 10px 15px;
  border-radius: 2px;
  color: var(--fg);
  font-weight: bold;
  text-decoration: none;
  text-transform: none;
  white-space: nowrap;
}
.chooseCategory a:focus {
  background-color: var(--font-color);
}
.chooseCategory i {
  margin-right: 7px;
}
tfoot tr {
  display: flex;
  justify-content: flex-end;
}
#parts_total {
  color: var(--font-color);
}
/* ... */

